# RustLangES.github.io

./: .env  .gitignore  .gitmodules  .rusty-hook.toml  CNAME  Cargo.toml  Makefile  Makefile.toml  README.md  Trunk.toml  build.rs  bun.lockb  clippy.toml  flake.nix  index.html  input.css  leptosfmt.toml  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  tailwind.config.js
.githooks/: pre-push.sh
.github/: dependabot.yml
.github/workflows/: clippy.yml  dependabot-merge.yml  gh-pages.yml  pages.yml  pr-preview.yml  sitemap_hook.yml
assets/: CNAME  ferris-hero.avif  fonts.css  kaku.avif  roadmap.avif  roadmap2.avif  roadmap3.avif  sitemap.xml
assets/gen_assets/: logo-freya.avif  logo-graphul.avif
assets/youtube/: dotmyself.avif  pineiden.avif  piny4man.avif  robertohuertasm.avif
public/: colaboradores.html  comunidad.html
public/.well-known/: discord
src/: app.rs  lib.rs  main.rs
src/components/: announcement_banner.rs  became_sponsor.rs  button_large_link.rs  button_link.rs  challenges.rs  channels.rs  community_project.rs  community_projects.rs  contributor_card.rs  dummy_component.rs  footer.rs  hacktoberfest.rs  head_information.rs  header.rs  hero.rs  mod.rs  other_communities.rs  our_communities.rs  our_community.rs  our_sponsors.rs  out_communities.rs  project_card.rs  resources.rs  separator.rs  slogan_button.rs  sponsor_block.rs  sponsors.rs  why_rust.rs
src/components/aprende/: books.rs  header.rs  mod.rs  roadmap.rs  youtube.rs
src/components/atom/: discord_icon.rs  github_icon.rs  mod.rs  telegram_icon.rs
src/components/cards/: card_title.rs  community_card.rs  contributor_card.rs  mod.rs  project_card.rs
src/components/icons/: calendar_icon.rs  cloudflare.rs  discord_icon.rs  github_icon.rs  linkedin_icon.rs  location_icon.rs  logo_rust_page.rs  mod.rs  next.rs  shuttle_icon.rs  telegram_icon.rs  twitter_icon.rs  web_icon.rs
src/components/icons/new/: logo_rust_dark_page.rs  logo_rust_light_page.rs  mod.rs
src/components/layout/: community_links.rs  header.rs  hero.rs  mod.rs  other_communities.rs
src/context/: mod.rs  theme_provider.rs
src/models/: github_user.rs  mod.rs
src/pages/: Communidad.rs  aprende.rs  blog.rs  communidad.rs  communities.rs  contributors.rs  events.rs  index.rs  mod.rs  projects.rs
style/: output.css
