[package]
name = "rust_lang_es"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.4.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.4.8", features = ["csr", "nightly"] }
leptos_router = { version = "0.4.8", features = ["csr", "nightly"] }
log = "0.4"
gloo-net = { version = "0.2", features = ["http"] }


# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}

