[package]
name = "rust_lang_es"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5.0-beta2", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.0-beta2", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.0-beta2", features = ["csr", "nightly"] }
log = "0.4"
gloo-net = { version = "0.2", features = ["http"] }
reqwasm = "0.5"
serde = { version = "1", features = ["derive"] }

# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}
rand = "0.8.5"

[dev-dependencies]
rusty-hook = "^0.11.2"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Link time optimization.
incremental = true
codegen-units = 1 # Allow for maximum size reduction optimizations.
debug-assertions = false
